# birdflow

./: Cargo.toml  README.md
assets/: test-new.scn.ron  test.scn.ron
assets/shaders/: constants.wgsl  fog_of_war.wgsl  grid.wgsl  grid_background.wgsl  minimap.wgsl  navigation_shader.wgsl  obstacles.wgsl
src/: aabb.rs  bird.rs  camera.rs  config.rs  cursor.rs  effects.rs  fog.rs  grid.rs  inputs.rs  main.rs  maplit.rs  meshes.rs  physics.rs  raycast.rs  scene.rs  selector.rs  stages.rs  waypoint.rs  window.rs  zindex.rs  zooid.rs
src/grid/: entity.rs  fog.rs  grid2.rs  minimap.rs  mod.rs  navigation.rs  navigation_visualizer.rs  obstacles.rs  shader_plane.rs  spec.rs  visualizer.rs
src/objects/: carry.rs  chaser.rs  commands.rs  config.rs  damage.rs  food.rs  mod.rs  neighbors.rs  object.rs  objective.rs  plankton.rs  waypoint.rs  zooid_head.rs  zooid_worker.rs
