[package]
edition = "2021"
name = "birdflow"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12.0", features = ["dynamic_linking", "file_watcher"]}
bevy_editor_pls = "0.6.0"
bevy_mod_raycast = "0.16.0"
derive_more = "0.99.17"
serde = "1.0.192"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false
opt-level = 3
