[package]
edition = "2021"
name = "birdflow"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12.0", features = [
  "bevy_winit",
  "bevy_asset",
  "bevy_ui",
  "bevy_text",
  "bevy_audio",
  "bevy_gizmos",
  "bevy_scene",
  "bevy_sprite",
  "default_font",
  "multi-threaded", #   "file_watcher",
], default-features = false}
bevy_hanabi = "0.9.0"
bevy_mod_raycast = "0.16.0"
derive_more = "0.99.17"
rand = "0.8.5"
ron = "0.8.1"
serde = "1.0.192"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false
opt-level = 3
